feat: Add button hover animation, color palette

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>원 라인 코스</title>
-    <script type="module" src="./entry.tsx" defer></script>
+    <script type="module" src="./index.tsx" defer></script>
   </head>
   <body>
     <div class="root"></div>
