--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>원 라인 코스</title>
+
+    <!-- Font Awesome for adding icons -->
+    <script
+      src="https://kit.fontawesome.com/2d6cfa1461.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- React entry point -->
     <script type="module" src="./index.tsx" defer></script>
   </head>
   <body>
