refactor: Remove unused img tags

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="google-site-verification"
+      content="ZdydloKE19U6-v4wOi8N7jRduwR7vjIl7Ef46bpwCbs"
+    />
+    <meta
       name="원라인코스 (one-line-course)"
       content="Search your lectures everywhere!"
     />
