--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="google-site-verification"
+      content="ZdydloKE19U6-v4wOi8N7jRduwR7vjIl7Ef46bpwCbs"
+    />
+    <meta
       name="원라인코스 (one-line-course)"
       content="Search your lectures everywhere!"
     />
@@ -33,7 +37,11 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="https://developers.kakao.com/sdk/js/kakao.js" async></script>
+    <script
+      src="https://developers.kakao.com/sdk/js/kakao.js"
+      async
+      crossorigin="anonymous"
+    ></script>
 
     <!-- React entry point -->
     <script type="module" src="./index.tsx" defer></script>
