--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' https://apis.google.com 'unsafe-inline' 'unsafe-eval';"
+    /> -->
     <title>원 라인 코스</title>
 
     <!-- Font Awesome for adding icons -->
