API connection wip

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,13 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- aws server verification -->
     <meta
       name="google-site-verification"
       content="ZdydloKE19U6-v4wOi8N7jRduwR7vjIl7Ef46bpwCbs"
     />
+    <!-- 가비아 웹 호스팅 google server verification -->
+
     <meta
       name="원라인코스 (one-line-course)"
       content="Search your lectures everywhere!"
@@ -37,7 +40,11 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="https://developers.kakao.com/sdk/js/kakao.js" async></script>
+    <script
+      src="https://developers.kakao.com/sdk/js/kakao.js"
+      async
+      crossorigin="anonymous"
+    ></script>
 
     <!-- React entry point -->
     <script type="module" src="./index.tsx" defer></script>
