Fix: nav styling padding

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- aws server verification -->
-    <meta
+    <!-- <meta
       name="google-site-verification"
       content="ZdydloKE19U6-v4wOi8N7jRduwR7vjIl7Ef46bpwCbs"
-    />
+    /> -->
     <!-- 가비아 웹 호스팅 google server verification -->
 
     <meta
@@ -21,26 +21,12 @@
       name="원라인코스 (one-line-course)"
       content="Search your lectures everywhere!"
     />
-    <!-- <link rel="apple-touch-icon" href="../public/logo192.png" /> -->
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <!-- <link rel="manifest" href="../public/manifest.json" /> -->
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>원 라인 코스</title>
 
     <!-- Font Awesome for adding icons -->
     <script
       src="https://kit.fontawesome.com/2d6cfa1461.js"
+      async
       crossorigin="anonymous"
     ></script>
 
