Fix: Use Portal (Backdrop, LecturePopup), Add other Carousel

--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,11 @@
     <!-- Font Awesome for adding icons -->
     <script
       src="https://kit.fontawesome.com/2d6cfa1461.js"
-      async
       crossorigin="anonymous"
     ></script>
 
     <script
       src="https://developers.kakao.com/sdk/js/kakao.js"
-      async
       crossorigin="anonymous"
     ></script>
 
@@ -40,6 +38,8 @@
     <script type="module" src="./index.tsx" defer></script>
   </head>
   <body>
+    <div id="backdrop-root"></div>
+    <div id="popup-root"></div>
     <div class="root"></div>
   </body>
 </html>
