fix: build error with parcel2, -> parcel-bundler(1)

--- a/index.html
+++ b/index.html
@@ -5,17 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- aws server verification -->
-    <!-- <meta
-      name="google-site-verification"
-      content="ZdydloKE19U6-v4wOi8N7jRduwR7vjIl7Ef46bpwCbs"
-    /> -->
-    <!-- 가비아 웹 호스팅 google server verification -->
 
-    <meta
-      name="google-site-verification"
-      content="ZdydloKE19U6-v4wOi8N7jRduwR7vjIl7Ef46bpwCbs"
-    />
     <meta
       name="원라인코스 (one-line-course)"
       content="Search your lectures everywhere!"
@@ -34,7 +24,7 @@
     ></script>
 
     <!-- React entry point -->
-    <script type="module" src="./index.tsx" defer></script>
+    <script type="module" src="./src/index.tsx" defer></script>
   </head>
   <body>
     <div id="backdrop-root"></div>
